--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body {
+       margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
+       background-image: url("https://wallpaperplay.com/walls/full/3/7/1/46212.jpg");
+       background-repeat: no-repeat;
+       background-size: cover;
+     /* background-color: powderblue; */
+    }
